--- a/TODO.txt
+++ b/TODO.txt
@@ -9,3 +9,27 @@ UStruct/UClass
 
 Code blocks
 1. Find .cpp file and insert there
+
+Property
+1. Commands
+
+Property generation
+1. 
+
+Function generation
+1.
+
+Type generation
+1. Pointer
+1.1. Is (+DONE, TESTED)
+1.2. Add (+DONE, TESTED)
+1.3. IsPtrToConst (+DONE, TESTED)
+1.4. IsPtrToMutable (+DONE, TESTED)
+2. Ref
+2.1. Is (+DONE, TESTED)
+2.2. Add (+DONE, TESTED)
+2.3. IsReferenceToConst (+DONE, TESTED)
+2.4. IsReferenceToMutable (+DONE, TESTED)
+3. RValueRef
+3.1. IsRValueRef (+DONE, TESTED)
+3.2. Add (+DONE, TESTED)
