--- a/TODO.txt
+++ b/TODO.txt
@@ -33,6 +33,10 @@ Property generation
 1.2. Name
 1.3. Default initializer
 
+Variable generation impl
+1. InsertVariableAt
+2. Integrate AddCodeAt_CppVarOrField into the Variable generation command
+
 Function generation
 1.
 
