--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,24 @@
+TODO Today
+1. Context string calculation
+1.1. Calculates context near the given line
+1.1.1. Context types:
+- Function body; // Can be together WITH class, if inside inlined body?
+- Class;
+- Enum;
+- Glob;//Global or namespace
+1.1.2. Info:
+1.1.2.0. Common info:
+1.1.2.0.0. Entity name (class, enum, function name etc.)
+1.1.2.0.1. Namespace Name
+1.1.2.0.2. ClassName (where we inside class)
+1.1.2.1. Formatting info:
+1.1.2.1.1. Do we have a blank line or line of namespaces above?
+1.1.2.1.2. Number of blank lines above
+1.1.2.1.3. Identation parameter of the last NON-blank :line above (num spaces or tabs)
+1.1.2.1.4. What line do we have above (may be provided as the REST of the context string after SOME char)
+1.1.2.3. Class info:
+1.1.2.3.1 Section (private, protected, public etc.)
+
 Function
 1. Static support
 
