--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,8 @@
 TODO Today
-1. Context string calculation
+Enum generation
+Enum literal generation
+
+1. Context calculation
 1.1. Calculates context near the given line
 1.1.1. Context types:
 - Function body; // Can be together WITH class, if inside inlined body?
@@ -15,9 +18,12 @@ TODO Today
 1.1.2.1.1. Do we have a blank line or line of namespaces above?
 1.1.2.1.2. Number of blank lines above
 1.1.2.1.3. Identation parameter of the last NON-blank :line above (num spaces or tabs)
-1.1.2.1.4. What line do we have above (may be provided as the REST of the context string after SOME char)
+1.1.2.1.4. What line do we have above
 1.1.2.3. Class info:
 1.1.2.3.1 Section (private, protected, public etc.)
+
+Pass context dictionary
+1. Into commands
 
 Function
 1. Static support
@@ -60,6 +66,16 @@ Variable generation impl
 
 Function generation
 1.
+
+Comment generation
+1. General
+1.1. Cpp comment GetLines function (+DONE)
+1.2. Add cpp comment function
+2. Types:
+2.1. Function
+2.1.1. Return value
+2.1.2. Args
+2.2.
 
 Type generation
 1. Pointer
